--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+ 	modImplementation include ("maven.modrinth:midnightlib:${project.midnightlib_version}")  
 }
 
 processResources {
