--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ archives_base_name=blowing-bubbles
 # Dependencies
 fabric_version=0.130.0+1.21.8
 fusion_version=1.2.10-fabric-mc1.21.6
+midnightlib_version=1.7.5+1.21.6-fabric
